--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@ body {
     flex-direction: column;
     height: 100vh;
     margin: 0;
-    background: #f0f2f5;
+    /* Cleaner, soft gradient background */
+    background: linear-gradient(180deg, #e0f7fa 0%, #ffffff 100%);
 }
 .container {
-    background: #fff;
-    padding: 30px 40px;
-    border-radius: 12px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    background: #ffffff;
+    padding: 40px 50px;
+    border-radius: 15px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     text-align: center;
     max-width: 500px;
     width: 90%;
@@ -31,6 +32,11 @@ body {
     word-break: break-all;
     color: #333;
     min-height: 2rem;
+    transition: color 0.3s, transform 0.2s;
+}
+.email.copied {
+    color: #28a745;
+    transform: scale(1.05);
 }
 .stats {
     margin-bottom: 15px;
@@ -38,31 +44,32 @@ body {
     font-weight: bold;
 }
 button {
-    padding: 10px 20px;
-    margin: 5px;
+    padding: 12px 25px;
+    margin: 10px 0;
     border: none;
-    border-radius: 8px;
+    border-radius: 10px;
     font-size: 1rem;
     cursor: pointer;
-    transition: background 0.3s;
-}
-#copyBtn {
-    background: #4caf50;
+    transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
+    background: #28a745;
     color: #fff;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
 }
-#copyBtn:hover {
-    background: #45a049;
+button:hover {
+    background: #218838;
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
 }
 @media(max-width: 500px){
     .container {
-        padding: 20px 25px;
+        padding: 25px 30px;
     }
     .email {
         font-size: 1.2rem;
     }
     button {
         font-size: 0.9rem;
-        padding: 8px 16px;
+        padding: 10px 20px;
     }
 }
 </style>
@@ -80,75 +87,66 @@ let emails = [];
 let copiedCount = 0;
 let usedEmails = new Set();
 
-// Elements
 const emailDiv = document.getElementById("email");
 const copyBtn = document.getElementById("copyBtn");
 const statsDiv = document.getElementById("stats");
 
-// GitHub raw URLs
 const githubPC = "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/pc_emails.txt";
 const githubMobile = "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/mobile_emails.txt";
 
-// Detect device
 const isMobile = /Mobi|Android/i.test(navigator.userAgent);
 const githubURL = isMobile ? githubMobile : githubPC;
 
-// Load used emails from LocalStorage
 const storageKey = isMobile ? "usedEmailsMobile" : "usedEmailsPC";
 const storedUsed = localStorage.getItem(storageKey);
 if(storedUsed){
     usedEmails = new Set(JSON.parse(storedUsed));
 }
 
-// Update stats
 function updateStats() {
     statsDiv.textContent = `Copied: ${copiedCount} | Remaining: ${emails.length}`;
 }
 
-// Show next email
 function showNextEmail() {
-    if(emails.length === 0){
-        emailDiv.textContent = "No more emails!";
-        copyBtn.disabled = true;
-        updateStats();
-        return;
-    }
     while(emails.length > 0 && usedEmails.has(emails[0])){
         emails.shift();
     }
     if(emails.length === 0){
-        emailDiv.textContent = "No more emails!";
+        emailDiv.textContent = "🎉 All emails copied!";
         copyBtn.disabled = true;
     } else {
         emailDiv.textContent = emails[0];
+        emailDiv.classList.remove("copied");
+        copyBtn.disabled = false;
+        copyBtn.textContent = "Copy";
     }
     updateStats();
 }
 
-// Copy & Auto-Next
 function copyEmail() {
     if(emails.length === 0) return;
 
-    const currentEmail = emails.shift();
+    const currentEmail = emails[0];
+
     if(!usedEmails.has(currentEmail)){
         navigator.clipboard.writeText(currentEmail)
             .then(() => {
                 copiedCount++;
                 usedEmails.add(currentEmail);
-                // Save to localStorage
                 localStorage.setItem(storageKey, JSON.stringify([...usedEmails]));
-                showNextEmail();
+
+                // Button tick feedback
+                copyBtn.textContent = "✅ Copied!";
+                emailDiv.classList.add("copied");
+
+                setTimeout(() => showNextEmail(), 1200);
             })
             .catch(err => alert("Failed to copy!"));
-    } else {
-        showNextEmail();
     }
 }
 
-// Copy button click
 copyBtn.addEventListener("click", copyEmail);
 
-// Keyboard shortcut Ctrl+C
 document.addEventListener("keydown", (e) => {
     if(e.ctrlKey && e.key === "c"){
         copyEmail();
@@ -156,7 +154,6 @@ document.addEventListener("keydown", (e) => {
     }
 });
 
-// Load emails from GitHub
 fetch(githubURL)
     .then(response => response.text())
     .then(text => {
