--- a/index.html
+++ b/index.html
@@ -1,174 +1,189 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Copy & Auto-Next Email with LocalStorage</title>
+<title>Local Auto Data & Number Copy</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 <style>
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
-    margin: 0;
-    /* Cleaner, soft gradient background */
-    background: linear-gradient(180deg, #e0f7fa 0%, #ffffff 100%);
-}
-.container {
-    background: #ffffff;
-    padding: 40px 50px;
-    border-radius: 15px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-    text-align: center;
-    max-width: 500px;
-    width: 90%;
-    margin-bottom: 20px;
-}
-.email {
-    font-size: 1.5rem;
-    margin: 20px 0;
-    word-break: break-all;
-    color: #333;
-    min-height: 2rem;
-    transition: color 0.3s, transform 0.2s;
-}
-.email.copied {
-    color: #28a745;
-    transform: scale(1.05);
-}
-.stats {
-    margin-bottom: 15px;
-    color: #555;
-    font-weight: bold;
-}
-button {
-    padding: 12px 25px;
-    margin: 10px 0;
-    border: none;
-    border-radius: 10px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
-    background: #28a745;
-    color: #fff;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-}
-button:hover {
-    background: #218838;
-    transform: scale(1.05);
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-}
-@media(max-width: 500px){
-    .container {
-        padding: 25px 30px;
-    }
-    .email {
-        font-size: 1.2rem;
-    }
-    button {
-        font-size: 0.9rem;
-        padding: 10px 20px;
-    }
-}
+body { font-family: Arial; background:#0e1726; color:#fff; margin:0; padding:20px; display:flex; flex-direction:column; align-items:center; gap:20px;}
+.container { background:#1a2333; padding:15px 20px; border-radius:15px; width:95%; max-width:500px; text-align:center; }
+.data-text { font-size:1.1rem; margin:15px 0; min-height:2rem; transition:0.3s; }
+.data-text.copied { color:#00ffae; transform:scale(1.05); }
+.stats-container { display:flex; justify-content:space-around; flex-wrap:wrap; margin-bottom:15px;}
+.stats { font-size:0.9rem; color:#ccc; margin:5px;}
+.button-container { display:flex; justify-content:center; gap:15px; flex-wrap:wrap; margin-top:15px;}
+button { cursor:pointer; transition:0.2s; }
+button.username-btn {background:#007bff;color:#fff;width:50px;height:50px;border-radius:50%;display:flex;justify-content:center;align-items:center;font-size:1.5rem;}
+button.gmail-btn {background:#28a745;color:#fff;width:50px;height:50px;border-radius:50%;display:flex;justify-content:center;align-items:center;font-size:1.5rem;}
+button.name-btn {background:#ffc107;color:#333;width:50px;height:50px;border-radius:50%;display:flex;justify-content:center;align-items:center;font-size:1.5rem;}
+@keyframes pop {0%{transform:scale(1);}50%{transform:scale(1.3);filter:brightness(1.5);}100%{transform:scale(1);filter:brightness(1);}}
+button.copied-anim {animation:pop 0.4s ease;}
+
+/* Number copy */
+textarea {width:100%; height:80px; border-radius:5px; border:none; padding:5px; resize:none; margin-bottom:5px;}
+.numbers-list {display:flex; flex-wrap:wrap; gap:5px; margin-top:5px;}
+.numbers-list button {background:#007bff;padding:3px 8px;font-size:0.8rem;transition:0.2s;}
+.numbers-list button.copied {background:#00ffae;color:#000;font-weight:bold; transform:scale(1.1);}
+.control-buttons {display:flex; gap:5px; flex-wrap:wrap; margin-bottom:5px;}
+.control-buttons button {padding:5px 10px;margin:2px;border:none;border-radius:5px;background:#28a745;color:#fff;cursor:pointer;font-size:0.9rem;}
+
+/* Add new data form */
+#addDataForm {margin-top:20px;}
+#addDataForm input, #addDataForm select {padding:5px;margin:2px;border-radius:5px;border:none;}
+#addDataForm button {padding:5px 10px;border-radius:5px;border:none;background:#007bff;color:#fff;cursor:pointer;}
 </style>
 </head>
 <body>
 
-<div class="container">
-    <div class="stats" id="stats">Copied: 0 | Remaining: 0</div>
-    <div class="email" id="email">Loading emails...</div>
-    <button id="copyBtn" disabled>Copy</button>
+<!-- Auto Data Section -->
+<div class="container" id="autoDataContainer">
+    <div class="stats-container">
+        <div id="usernameStats" class="stats"><i class="fa-solid fa-user"></i> 0/0</div>
+        <div id="gmailStats" class="stats"><i class="fa-solid fa-envelope"></i> 0/0</div>
+        <div id="nameStats" class="stats"><i class="fa-solid fa-id-badge"></i> 0/0</div>
+    </div>
+    <div class="data-text" id="dataText">Loading...</div>
+    <div class="button-container">
+        <button class="username-btn" id="usernameBtn"><i class="fa-solid fa-user"></i></button>
+        <button class="gmail-btn" id="gmailBtn"><i class="fa-solid fa-envelope"></i></button>
+        <button class="name-btn" id="nameBtn"><i class="fa-solid fa-id-badge"></i></button>
+    </div>
+</div>
+
+<!-- Number Copy Section -->
+<div class="container" id="numberCopyContainer">
+    <textarea id="numbersInput" placeholder="একটি নাম্বার প্রতি লাইনে লিখুন"></textarea>
+    <div class="control-buttons">
+        <button id="generateBtn">Generate</button>
+        <button id="copyAllBtn">Copy All</button>
+        <button id="clearBtn">Clear All</button>
+    </div>
+    <div class="numbers-list" id="numbersList"></div>
+</div>
+
+<!-- Add New Data Section -->
+<div class="container" id="addDataContainer">
+    <form id="addDataForm">
+        <select id="dataType">
+            <option value="username">Username</option>
+            <option value="gmail">Gmail</option>
+            <option value="name">Name</option>
+        </select>
+        <input type="text" id="dataValue" placeholder="New value" required>
+        <button type="submit">Add</button>
+    </form>
 </div>
 
 <script>
-let emails = [];
-let copiedCount = 0;
-let usedEmails = new Set();
+// ---------------- Auto Data ----------------
+let data = { username: [], gmail: [], name: [] };
+let used = { username:new Set(), gmail:new Set(), name:new Set() };
+let totals = { username:0, gmail:0, name:0 };
+const dataDiv = document.getElementById("dataText");
 
-const emailDiv = document.getElementById("email");
-const copyBtn = document.getElementById("copyBtn");
-const statsDiv = document.getElementById("stats");
-
-const githubPC = "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/pc_emails.txt";
-const githubMobile = "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/mobile_emails.txt";
-
-const isMobile = /Mobi|Android/i.test(navigator.userAgent);
-const githubURL = isMobile ? githubMobile : githubPC;
-
-const storageKey = isMobile ? "usedEmailsMobile" : "usedEmailsPC";
-const storedUsed = localStorage.getItem(storageKey);
-if(storedUsed){
-    usedEmails = new Set(JSON.parse(storedUsed));
+function updateStats(type){
+    document.getElementById(type+"Stats").innerHTML =
+        `<i class="fa-solid fa-${type==='username'?'user':type==='gmail'?'envelope':'id-badge'}"></i> ${used[type].size}/${totals[type]}`;
 }
 
-function updateStats() {
-    statsDiv.textContent = `Copied: ${copiedCount} | Remaining: ${emails.length}`;
-}
-
-function showNextEmail() {
-    while(emails.length > 0 && usedEmails.has(emails[0])){
-        emails.shift();
-    }
-    if(emails.length === 0){
-        emailDiv.textContent = "🎉 All emails copied!";
-        copyBtn.disabled = true;
+function showNext(type){
+    while(data[type].length > 0 && used[type].has(data[type][0])) data[type].shift();
+    if(data[type].length === 0){
+        dataDiv.textContent = `🎉 All ${type}s copied!`;
     } else {
-        emailDiv.textContent = emails[0];
-        emailDiv.classList.remove("copied");
-        copyBtn.disabled = false;
-        copyBtn.textContent = "Copy";
+        const nextItem = data[type][0];
+        dataDiv.textContent = nextItem;
+        navigator.clipboard.writeText(nextItem).then(()=>{
+            dataDiv.classList.add("copied");
+            setTimeout(()=>dataDiv.classList.remove("copied"), 400);
+        });
+        used[type].add(nextItem);
     }
-    updateStats();
+    updateStats(type);
 }
 
-function copyEmail() {
-    if(emails.length === 0) return;
-
-    const currentEmail = emails[0];
-
-    if(!usedEmails.has(currentEmail)){
-        navigator.clipboard.writeText(currentEmail)
-            .then(() => {
-                copiedCount++;
-                usedEmails.add(currentEmail);
-                localStorage.setItem(storageKey, JSON.stringify([...usedEmails]));
-
-                // Button tick feedback
-                copyBtn.textContent = "✅ Copied!";
-                emailDiv.classList.add("copied");
-
-                setTimeout(() => showNextEmail(), 1200);
-            })
-            .catch(err => alert("Failed to copy!"));
+async function loadData(type, url){
+    try {
+        const resp = await fetch(url);
+        if(!resp.ok) throw new Error('File not found');
+        const text = await resp.text();
+        data[type] = text.split(/\r?\n/).filter(Boolean);
+        totals[type] = data[type].length;
+        updateStats(type);
+    } catch(e){
+        console.warn(`Cannot load ${type}:`, e);
+        dataDiv.textContent = `❌ Failed to load ${type} data`;
     }
 }
 
-copyBtn.addEventListener("click", copyEmail);
+document.getElementById("usernameBtn").addEventListener("click", ()=>showNext("username"));
+document.getElementById("gmailBtn").addEventListener("click", ()=>showNext("gmail"));
+document.getElementById("nameBtn").addEventListener("click", ()=>showNext("name"));
 
-document.addEventListener("keydown", (e) => {
-    if(e.ctrlKey && e.key === "c"){
-        copyEmail();
-        e.preventDefault();
-    }
+loadData("username","./username.txt");
+loadData("gmail","./emails.txt");
+loadData("name","./name.txt");
+
+// ---------------- Number Copy ----------------
+const numbersInput = document.getElementById("numbersInput");
+const numbersList = document.getElementById("numbersList");
+let numbersArray = [];
+let copiedSet = new Set();
+
+function renderNumbers(){
+    numbersList.innerHTML = "";
+    numbersArray.forEach(num => {
+        const btn = document.createElement("button");
+        btn.textContent = "+" + num; // + automatically add
+        if(copiedSet.has(num)) btn.classList.add("copied");
+        btn.addEventListener("click", ()=>{
+            navigator.clipboard.writeText("+" + num).then(()=>{
+                copiedSet.add(num);
+                btn.classList.add("copied");
+            });
+        });
+        numbersList.appendChild(btn);
+    });
+}
+
+document.getElementById("generateBtn").addEventListener("click", ()=>{
+    const nums = numbersInput.value.split(/\r?\n/).map(n=>n.trim()).filter(Boolean);
+    nums.forEach(n=>{
+        if(!numbersArray.includes(n)) numbersArray.push(n);
+    });
+    renderNumbers();
+    numbersInput.value = "";
 });
 
-fetch(githubURL)
-    .then(response => response.text())
-    .then(text => {
-        emails = text.split(/\r?\n/).filter(line => line.trim() !== "");
-        copiedCount = usedEmails.size;
-        if(emails.length > 0){
-            copyBtn.disabled = false;
-        }
-        showNextEmail();
-    })
-    .catch(err => {
-        emailDiv.textContent = "Failed to load emails!";
-        console.error(err);
+document.getElementById("copyAllBtn").addEventListener("click", ()=>{
+    if(numbersArray.length === 0) return;
+    const allText = numbersArray.map(n => "+" + n).join("\n");
+    navigator.clipboard.writeText(allText).then(()=>{
+        numbersArray.forEach(n=>copiedSet.add(n));
+        renderNumbers();
     });
-</script>
+});
 
+document.getElementById("clearBtn").addEventListener("click", ()=>{
+    numbersArray = [];
+    copiedSet.clear();
+    renderNumbers();
+});
+
+// ---------------- Add New Data ----------------
+document.getElementById("addDataForm").addEventListener("submit", (e)=>{
+    e.preventDefault();
+    const type = document.getElementById("dataType").value;
+    const value = document.getElementById("dataValue").value.trim();
+    if(value){
+        data[type].push(value);
+        totals[type]++;
+        updateStats(type);
+        document.getElementById("dataValue").value = "";
+        alert(`${type} added!`);
+    }
+});
+</script>
 </body>
 </html>
