--- a/index.html
+++ b/index.html
@@ -3,55 +3,137 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Local Auto Data & Number Copy</title>
+<title>Combined Auto Data & Number Copy</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 <style>
-body { font-family: Arial; background:#0e1726; color:#fff; margin:0; padding:20px; display:flex; flex-direction:column; align-items:center; gap:20px;}
-.container { background:#1a2333; padding:15px 20px; border-radius:15px; width:95%; max-width:500px; text-align:center; }
-.data-text { font-size:1.1rem; margin:15px 0; min-height:2rem; transition:0.3s; }
-.data-text.copied { color:#00ffae; transform:scale(1.05); }
-.stats-container { display:flex; justify-content:space-around; flex-wrap:wrap; margin-bottom:15px;}
-.stats { font-size:0.9rem; color:#ccc; margin:5px;}
-.button-container { display:flex; justify-content:center; gap:15px; flex-wrap:wrap; margin-top:15px;}
-button { cursor:pointer; transition:0.2s; }
-button.username-btn {background:#007bff;color:#fff;width:50px;height:50px;border-radius:50%;display:flex;justify-content:center;align-items:center;font-size:1.5rem;}
-button.gmail-btn {background:#28a745;color:#fff;width:50px;height:50px;border-radius:50%;display:flex;justify-content:center;align-items:center;font-size:1.5rem;}
-button.name-btn {background:#ffc107;color:#333;width:50px;height:50px;border-radius:50%;display:flex;justify-content:center;align-items:center;font-size:1.5rem;}
-@keyframes pop {0%{transform:scale(1);}50%{transform:scale(1.3);filter:brightness(1.5);}100%{transform:scale(1);filter:brightness(1);}}
-button.copied-anim {animation:pop 0.4s ease;}
+body {
+    font-family: Arial, sans-serif;
+    background: #0e1726;
+    color: #fff;
+    margin: 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+/* Common container style */
+.container {
+    background: #1a2333;
+    padding: 15px 20px;
+    border-radius: 15px;
+    width: 95%;
+    max-width: 500px;
+    box-sizing: border-box;
+    text-align: center;
+}
+/* AUTO DATA section */
+.data-text {
+    font-size: 1.1rem;
+    margin: 15px 0;
+    word-break: break-word;
+    min-height: 2rem;
+    transition: color 0.3s, transform 0.2s;
+}
+.data-text.copied {
+    color: #00ffae;
+    transform: scale(1.05);
+}
+.stats-container {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 15px;
+    flex-wrap: wrap;
+}
+.stats {
+    font-size: 0.9rem;
+    color: #ccc;
+    margin: 5px;
+}
+.button-container {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 15px;
+    flex-wrap: wrap;
+}
+button {
+    cursor: pointer;
+    transition: 0.2s;
+}
+/* AUTO DATA buttons */
+button.username-btn { background: #007bff; color:#fff; width:50px; height:50px; border-radius:50%; font-size:1.5rem; display:flex; align-items:center; justify-content:center;}
+button.username-btn:hover { background: #0069d9; }
+button.gmail-btn { background: #28a745; color:#fff; width:50px; height:50px; border-radius:50%; font-size:1.5rem; display:flex; align-items:center; justify-content:center;}
+button.gmail-btn:hover { background: #218838; }
+button.name-btn { background: #ffc107; color:#333; width:50px; height:50px; border-radius:50%; font-size:1.5rem; display:flex; align-items:center; justify-content:center;}
+button.name-btn:hover { background: #e0a800; }
 
-/* Number copy */
-textarea {width:100%; height:80px; border-radius:5px; border:none; padding:5px; resize:none; margin-bottom:5px;}
-.numbers-list {display:flex; flex-wrap:wrap; gap:5px; margin-top:5px;}
-.numbers-list button {background:#007bff;padding:3px 8px;font-size:0.8rem;transition:0.2s;}
-.numbers-list button.copied {background:#00ffae;color:#000;font-weight:bold; transform:scale(1.1);}
-.control-buttons {display:flex; gap:5px; flex-wrap:wrap; margin-bottom:5px;}
-.control-buttons button {padding:5px 10px;margin:2px;border:none;border-radius:5px;background:#28a745;color:#fff;cursor:pointer;font-size:0.9rem;}
-
-/* Add new data form */
-#addDataForm {margin-top:20px;}
-#addDataForm input, #addDataForm select {padding:5px;margin:2px;border-radius:5px;border:none;}
-#addDataForm button {padding:5px 10px;border-radius:5px;border:none;background:#007bff;color:#fff;cursor:pointer;}
+/* Compact Number Copy section */
+textarea {
+    width: 100%;
+    height: 80px;
+    border-radius:5px;
+    border:none;
+    padding:5px;
+    resize:none;
+    margin-bottom:5px;
+}
+.numbers-list {
+    display:flex;
+    flex-wrap:wrap;
+    gap:5px;
+    margin-top:5px;
+}
+.numbers-list button {
+    background:#007bff;
+    padding:3px 8px;
+    font-size:0.8rem;
+    transition:0.2s;
+}
+.numbers-list button.copied {
+    background:#00ffae; /* Copied হলে সবুজ */
+    color:#000;
+    font-weight:bold;
+}
+.control-buttons {
+    display:flex;
+    gap:5px;
+    flex-wrap:wrap;
+    margin-bottom:5px;
+}
+.control-buttons button {
+    padding:5px 10px;
+    margin:2px;
+    border:none;
+    border-radius:5px;
+    background:#28a745;
+    color:#fff;
+    cursor:pointer;
+    font-size:0.9rem;
+}
 </style>
 </head>
 <body>
 
-<!-- Auto Data Section -->
+<!-- AUTO DATA SECTION -->
 <div class="container" id="autoDataContainer">
     <div class="stats-container">
         <div id="usernameStats" class="stats"><i class="fa-solid fa-user"></i> 0/0</div>
         <div id="gmailStats" class="stats"><i class="fa-solid fa-envelope"></i> 0/0</div>
         <div id="nameStats" class="stats"><i class="fa-solid fa-id-badge"></i> 0/0</div>
     </div>
+
     <div class="data-text" id="dataText">Loading...</div>
+
     <div class="button-container">
-        <button class="username-btn" id="usernameBtn"><i class="fa-solid fa-user"></i></button>
-        <button class="gmail-btn" id="gmailBtn"><i class="fa-solid fa-envelope"></i></button>
-        <button class="name-btn" id="nameBtn"><i class="fa-solid fa-id-badge"></i></button>
+        <button class="username-btn" id="usernameBtn" title="Copy Username"><i class="fa-solid fa-user"></i></button>
+        <button class="gmail-btn" id="gmailBtn" title="Copy Gmail"><i class="fa-solid fa-envelope"></i></button>
+        <button class="name-btn" id="nameBtn" title="Copy Name"><i class="fa-solid fa-id-badge"></i></button>
     </div>
 </div>
 
-<!-- Number Copy Section -->
+<!-- COMPACT NUMBER COPY SECTION -->
 <div class="container" id="numberCopyContainer">
     <textarea id="numbersInput" placeholder="একটি নাম্বার প্রতি লাইনে লিখুন"></textarea>
     <div class="control-buttons">
@@ -62,128 +144,121 @@ textarea {width:100%; height:80px; border-radius:5px; border:none; padding:5px; 
     <div class="numbers-list" id="numbersList"></div>
 </div>
 
-<!-- Add New Data Section -->
-<div class="container" id="addDataContainer">
-    <form id="addDataForm">
-        <select id="dataType">
-            <option value="username">Username</option>
-            <option value="gmail">Gmail</option>
-            <option value="name">Name</option>
-        </select>
-        <input type="text" id="dataValue" placeholder="New value" required>
-        <button type="submit">Add</button>
-    </form>
-</div>
-
 <script>
-// ---------------- Auto Data ----------------
+// ---------------- AUTO DATA JS ----------------
 let data = { username: [], gmail: [], name: [] };
-let used = { username:new Set(), gmail:new Set(), name:new Set() };
-let totals = { username:0, gmail:0, name:0 };
+let used = { username: new Set(), gmail: new Set(), name: new Set() };
+let totals = { username: 0, gmail: 0, name: 0 };
 const dataDiv = document.getElementById("dataText");
 
+const urls = {
+    username: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/username.txt",
+    gmail: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/mobile_emails.txt",
+    name: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/name.txt"
+};
+
 function updateStats(type){
-    document.getElementById(type+"Stats").innerHTML =
-        `<i class="fa-solid fa-${type==='username'?'user':type==='gmail'?'envelope':'id-badge'}"></i> ${used[type].size}/${totals[type]}`;
+    const copied = used[type].size;
+    let icon = type === "username" ? "user" : type === "gmail" ? "envelope" : "id-badge";
+    document.getElementById(`${type}Stats`).innerHTML = `<i class="fa-solid fa-${icon}"></i> ${copied}/${totals[type]}`;
 }
 
 function showNext(type){
-    while(data[type].length > 0 && used[type].has(data[type][0])) data[type].shift();
-    if(data[type].length === 0){
+    while(data[type].length>0 && used[type].has(data[type][0])){
+        data[type].shift();
+    }
+    if(data[type].length===0){
         dataDiv.textContent = `🎉 All ${type}s copied!`;
     } else {
-        const nextItem = data[type][0];
-        dataDiv.textContent = nextItem;
-        navigator.clipboard.writeText(nextItem).then(()=>{
-            dataDiv.classList.add("copied");
-            setTimeout(()=>dataDiv.classList.remove("copied"), 400);
-        });
-        used[type].add(nextItem);
+        dataDiv.textContent = data[type][0].slice(0,30)+'...';
+        dataDiv.classList.remove("copied");
     }
     updateStats(type);
 }
 
-async function loadData(type, url){
-    try {
-        const resp = await fetch(url);
-        if(!resp.ok) throw new Error('File not found');
-        const text = await resp.text();
-        data[type] = text.split(/\r?\n/).filter(Boolean);
-        totals[type] = data[type].length;
-        updateStats(type);
-    } catch(e){
-        console.warn(`Cannot load ${type}:`, e);
-        dataDiv.textContent = `❌ Failed to load ${type} data`;
+function copyData(type){
+    if(data[type].length===0) return;
+    const current = data[type][0];
+    if(!used[type].has(current)){
+        const temp = document.createElement("textarea");
+        temp.value = current;
+        document.body.appendChild(temp);
+        temp.select();
+        temp.setSelectionRange(0,99999);
+        const success = document.execCommand("copy");
+        document.body.removeChild(temp);
+
+        if(success){
+            used[type].add(current);
+            localStorage.setItem(`used_${type}`, JSON.stringify([...used[type]]));
+            dataDiv.classList.add("copied");
+            dataDiv.textContent = `✅ Copied ${type}`;
+            setTimeout(()=>showNext(type),800);
+        } else {
+            alert("❌ Copy failed. Use Ctrl+C / Tap & Hold manually.");
+        }
     }
 }
 
-document.getElementById("usernameBtn").addEventListener("click", ()=>showNext("username"));
-document.getElementById("gmailBtn").addEventListener("click", ()=>showNext("gmail"));
-document.getElementById("nameBtn").addEventListener("click", ()=>showNext("name"));
+["username","gmail","name"].forEach(type=>{
+    const stored = localStorage.getItem(`used_${type}`);
+    if(stored) used[type] = new Set(JSON.parse(stored));
 
-loadData("username","./username.txt");
-loadData("gmail","./emails.txt");
-loadData("name","./name.txt");
+    fetch(urls[type])
+    .then(res=>res.text())
+    .then(txt=>{
+        data[type]=txt.split(/\r?\n/).filter(line=>line.trim()!=="");
+        totals[type]=data[type].length;
+        showNext(type);
+    })
+    .catch(err=>{
+        console.error(`Error loading ${type}`,err);
+        dataDiv.textContent = `❌ Failed to load ${type} data`;
+    });
 
-// ---------------- Number Copy ----------------
-const numbersInput = document.getElementById("numbersInput");
-const numbersList = document.getElementById("numbersList");
+    document.getElementById(`${type}Btn`).onclick = ()=>copyData(type);
+});
+
+// ---------------- COMPACT NUMBER COPY JS ----------------
 let numbersArray = [];
-let copiedSet = new Set();
 
-function renderNumbers(){
-    numbersList.innerHTML = "";
-    numbersArray.forEach(num => {
+document.getElementById("generateBtn").onclick = function(){
+    const input = document.getElementById("numbersInput").value;
+    const numbers = input.split(/\r?\n/).map(n => n.trim()).filter(n => n!=="");
+    numbersArray = numbers.map(n => '+'+n);
+    const listDiv = document.getElementById("numbersList");
+    listDiv.innerHTML="";
+    numbersArray.forEach(num=>{
         const btn = document.createElement("button");
-        btn.textContent = "+" + num; // + automatically add
-        if(copiedSet.has(num)) btn.classList.add("copied");
-        btn.addEventListener("click", ()=>{
-            navigator.clipboard.writeText("+" + num).then(()=>{
-                copiedSet.add(num);
+        btn.textContent = num;
+        btn.dataset.copied = "false";
+        btn.onclick = ()=> {
+            navigator.clipboard.writeText(num).then(()=>{
+                btn.dataset.copied = "true";
                 btn.classList.add("copied");
             });
+        };
+        listDiv.appendChild(btn);
+    });
+};
+
+document.getElementById("copyAllBtn").onclick = ()=>{
+    if(numbersArray.length===0) return;
+    navigator.clipboard.writeText(numbersArray.join("\n")).then(()=>{
+        document.querySelectorAll("#numbersList button").forEach(btn=>{
+            btn.dataset.copied = "true";
+            btn.classList.add("copied");
         });
-        numbersList.appendChild(btn);
+        alert("✅ All numbers copied!");
     });
-}
+};
 
-document.getElementById("generateBtn").addEventListener("click", ()=>{
-    const nums = numbersInput.value.split(/\r?\n/).map(n=>n.trim()).filter(Boolean);
-    nums.forEach(n=>{
-        if(!numbersArray.includes(n)) numbersArray.push(n);
-    });
-    renderNumbers();
-    numbersInput.value = "";
-});
-
-document.getElementById("copyAllBtn").addEventListener("click", ()=>{
-    if(numbersArray.length === 0) return;
-    const allText = numbersArray.map(n => "+" + n).join("\n");
-    navigator.clipboard.writeText(allText).then(()=>{
-        numbersArray.forEach(n=>copiedSet.add(n));
-        renderNumbers();
-    });
-});
-
-document.getElementById("clearBtn").addEventListener("click", ()=>{
-    numbersArray = [];
-    copiedSet.clear();
-    renderNumbers();
-});
-
-// ---------------- Add New Data ----------------
-document.getElementById("addDataForm").addEventListener("submit", (e)=>{
-    e.preventDefault();
-    const type = document.getElementById("dataType").value;
-    const value = document.getElementById("dataValue").value.trim();
-    if(value){
-        data[type].push(value);
-        totals[type]++;
-        updateStats(type);
-        document.getElementById("dataValue").value = "";
-        alert(`${type} added!`);
-    }
-});
+document.getElementById("clearBtn").onclick = ()=>{
+    numbersArray=[];
+    document.getElementById("numbersList").innerHTML="";
+    document.getElementById("numbersInput").value="";
+};
 </script>
+
 </body>
 </html>
