--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ body{
   display:block;
 }
 
-/* FOOTER */
+/* MAIN FOOTER */
 .footer{
   height:44px;
   background:#0b1220;
@@ -137,6 +137,37 @@ body{
 .footer a{
   color:#22c55e;
   text-decoration:none;
+}
+
+/* FLOATING TG BUTTONS */
+.tg-footer{
+  position:fixed;
+  bottom:58px;
+  left:50%;
+  transform:translateX(-50%);
+  display:flex;
+  gap:12px;
+  z-index:9999;
+}
+
+.tg-btn{
+  display:flex;
+  align-items:center;
+  gap:6px;
+  padding:8px 14px;
+  border-radius:999px;
+  background:#0f172a;
+  color:#e5e7eb;
+  text-decoration:none;
+  font-size:13px;
+  border:1px solid #1f2937;
+  box-shadow:0 6px 16px rgba(0,0,0,.4);
+  transition:.25s;
+}
+
+.tg-btn:hover{
+  background:#16a34a;
+  color:#fff;
 }
 </style>
 </head>
@@ -190,7 +221,17 @@ body{
 
 </div>
 
-<!-- FOOTER -->
+<!-- FLOATING TG BUTTONS -->
+<div class="tg-footer">
+  <a href="https://t.me/all_tips_bd" target="_blank" class="tg-btn">
+    📩 TG Channel
+  </a>
+  <a href="https://t.me/mr_ruhul_001" target="_blank" class="tg-btn">
+    👤 Contact
+  </a>
+</div>
+
+<!-- MAIN FOOTER -->
 <div class="footer">
   <a href="https://t.me/all_tips_bd" target="_blank">Telegram Channel</a> |
   <a href="https://t.me/mr_ruhul_001" target="_blank">Contact</a>
