Enhance sidebar and footer styles with animations
Updated styles for sidebar and menu animations. Adjusted layout and footer button styles.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,9 +35,13 @@ body{
 .menu-btn{
   font-size:22px;
   cursor:pointer;
+  transition:transform .2s ease;
+}
+.menu-btn:active{
+  transform:scale(.9) rotate(-5deg);
 }
 .topbar .title{
-  font-size:17px;
+  font-size:16px;
   font-weight:600;
 }
 .topbar .channel{
@@ -51,27 +56,29 @@ body{
   position:relative;
 }
 
-/* SIDEBAR */
+/* SIDEBAR (ANIMATED) */
 .sidebar{
   position:absolute;
   top:0;
-  left:-240px;
+  left:-260px;
   width:220px;
   height:100%;
   background:#0f172a;
   border-right:1px solid #1f2937;
   padding:14px;
-  transition:.25s ease;
+  transition:left .35s cubic-bezier(.4,0,.2,1),
+             box-shadow .35s ease;
   z-index:50;
 }
-.sidebar.show{ left:0; }
-
+.sidebar.show{
+  left:0;
+  box-shadow:8px 0 30px rgba(0,0,0,.5);
+}
 .sidebar h3{
   margin:0 0 12px;
   font-size:14px;
   opacity:.8;
 }
-
 .menu a{
   display:block;
   padding:10px 12px;
@@ -81,13 +88,29 @@ body{
   color:#fff;
   background:#111a2e;
   cursor:pointer;
+
+  transform:translateX(-10px);
+  opacity:0;
+  transition:
+    transform .35s cubic-bezier(.4,0,.2,1),
+    opacity .35s ease,
+    background .25s ease;
 }
+.sidebar.show .menu a{
+  transform:translateX(0);
+  opacity:1;
+}
+.sidebar.show .menu a:nth-child(1){transition-delay:.05s}
+.sidebar.show .menu a:nth-child(2){transition-delay:.10s}
+.sidebar.show .menu a:nth-child(3){transition-delay:.15s}
+.sidebar.show .menu a:nth-child(4){transition-delay:.20s}
+
 .menu a:hover,
 .menu a.active{
   background:#16a34a;
 }
 .menu a.disabled{
-  opacity:.5;
+  opacity:.4;
   pointer-events:none;
 }
 
@@ -96,10 +119,15 @@ body{
   position:absolute;
   inset:0;
   background:rgba(0,0,0,.4);
-  display:none;
+  opacity:0;
+  pointer-events:none;
+  transition:opacity .3s ease;
   z-index:40;
 }
-.overlay.show{ display:block; }
+.overlay.show{
+  opacity:1;
+  pointer-events:auto;
+}
 
 /* MAIN */
 .main{
@@ -117,34 +145,45 @@ body{
   border:none;
   display:none;
 }
-.tool-frame.active{ display:block; }
+.tool-frame.active{
+  display:block;
+}
 
 /* FLOATING TG BAR */
 .tg-footer{
   position:fixed;
-  bottom:18px;
+  bottom:6px;
   left:50%;
   transform:translateX(-50%);
-  background:rgba(17,26,46,.85);
-  backdrop-filter:blur(8px);
+  background:rgba(17,26,46,.95);
+  backdrop-filter:blur(10px);
   border:1px solid #1f2937;
   border-radius:999px;
-  padding:6px 14px;
+  padding:8px 12px;
   display:flex;
-  gap:10px;
-  align-items:center;
-  font-size:13px;
+  gap:12px;
   z-index:9999;
 }
-.tg-footer a{
+.tg-btn{
+  min-width:130px;
+  padding:8px 14px;
+  border-radius:999px;
+  background:#0b1220;
+  border:1px solid #1f2937;
   color:#22c55e;
   text-decoration:none;
+  font-size:13px;
   display:flex;
   align-items:center;
-  gap:5px;
-  padding:4px 6px;
+  justify-content:center;
+  gap:6px;
+  transition:.25s ease;
 }
-.tg-footer span{ color:#374151; }
+.tg-btn:hover{
+  background:#16a34a;
+  color:#fff;
+  border-color:#16a34a;
+}
 </style>
 </head>
 
@@ -156,7 +195,7 @@ body{
     <div class="menu-btn" onclick="toggleMenu()">☰</div>
     <div class="title">All Tips BD Online Work Tools</div>
   </div>
-  <div class="channel">⭐ All Tips BD 🌟</div>
+  <div class="channel">⭐ All Tips BD ⭐</div>
 </div>
 
 <!-- BODY -->
@@ -168,7 +207,6 @@ body{
     <div class="menu">
       <a class="active" onclick="showTool('home', this)">🏠 Home</a>
       <a onclick="showTool('gmail', this)">📧 Gmail Tool</a>
-      <a onclick="showTool('googlelogin', this)">🔐 Google Login</a>
       <a class="disabled">🤖 AI Tool</a>
       <a class="disabled">💼 Online Work</a>
     </div>
@@ -183,24 +221,22 @@ body{
     <!-- HOME -->
     <iframe id="tool-home" class="tool-frame active" src="page2.html"></iframe>
 
-    <!-- GMAIL -->
+    <!-- GMAIL TOOL -->
     <iframe id="tool-gmail" class="tool-frame" src="page1.html"></iframe>
 
-    <!-- GOOGLE LOGIN -->
-    <iframe id="tool-googlelogin" class="tool-frame" src="google-login.html"></iframe>
-
   </div>
-
 </div>
 
 <!-- FLOATING TG BAR -->
 <div class="tg-footer">
-  <a href="https://t.me/all_tips_bd" target="_blank">📨 TG Channel</a>
-  <span>|</span>
-  <a href="https://t.me/mr_ruhul_001" target="_blank">👤 Contact</a>
+  <a class="tg-btn" href="https://t.me/all_tips_bd" target="_blank">✉️ TG Channel</a>
+  <a class="tg-btn" href="https://t.me/mr_ruhul_001" target="_blank">👤 Contact</a>
 </div>
 
 <script>
+const sidebar = document.getElementById("sidebar");
+const overlay = document.getElementById("overlay");
+
 function toggleMenu(){
   sidebar.classList.toggle("show");
   overlay.classList.toggle("show");
@@ -212,8 +248,10 @@ function closeMenu(){
 function showTool(name, el){
   document.querySelectorAll(".menu a").forEach(a=>a.classList.remove("active"));
   el.classList.add("active");
+
   document.querySelectorAll(".tool-frame").forEach(f=>f.classList.remove("active"));
   document.getElementById("tool-"+name).classList.add("active");
+
   closeMenu();
 }
 </script>
