Add Notepad tool link and iframe to index.html

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@ body{
       <a class="active" onclick="showTool('home', this)">🏠 Home</a>
       <a onclick="showTool('gmail', this)">📧 Gmail Tool</a>
       <a onclick="showTool('google', this)">🔐 Google Login</a>
+      <a onclick="showTool('notepad', this)">📝 Notepad</a>
       <a class="disabled">🤖 AI Tool</a>
       <a class="disabled">💼 Online Work</a>
     </div>
@@ -229,7 +230,7 @@ body{
   class="tool-frame"
   src="google-login.html">
 </iframe>
-    
+    <iframe id="tool-notepad" class="tool-frame" src="notepad.html"></iframe>
   </div>
 </div>
 
