Enable AI Tool link in the navigation

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ body{
       <a onclick="showTool('gmail', this)">📧 Gmail Tool</a>
       <a onclick="showTool('google', this)">🔐 Google Login</a>
       <a onclick="showTool('notepad', this)">📝 Notepad</a>
-      <a class="disabled">🤖 AI Tool</a>
+      <a onclick="showTool('ai', this)">🤖 AI Tool</a>
       <a class="disabled">💼 Online Work</a>
     </div>
   </div>
@@ -222,7 +222,7 @@ body{
 
     <!-- HOME -->
     <iframe id="tool-home" class="tool-frame active" src="page2.html"></iframe>
-
+<iframe id="tool-ai" class="tool-frame" src="ai-tools.html"></iframe>
     <!-- GMAIL TOOL -->
     <iframe id="tool-gmail" class="tool-frame" src="page1.html"></iframe>
 <iframe
